[omnibox] Pass same input to both URL reductions in comparison

When comparing 2 URLs for equality in StrippedURLsAreEqual() - one a
suggestion and one an open tab - we were passing the user input to
only one of the reductions - the suggestion, since the suggestion was
based on it, and because the open tab was assumed to be already
cleaned up.

Instead, the input causes rules to be applied to the suggestion URL
which must also be applied to the open tab URL, so that, if equal,
they compare equal.

This CL changes the comparison to pass the input to both reductions so
that we're comparing apples to apples.

Bug: 842170
Change-Id: Ib88d7306b25ceaf9b1441366e66199620e107492
Reviewed-on: https://chromium-review.googlesource.com/1055670
Commit-Queue: Kevin Bailey <krb@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558472}
Former-commit-id: cafb944bc42712c0e4463a8eefc911d8b30793a7